<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="av39079.android.fer.hr.FormActivity">

    <TextView
            android:text="@string/add_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/etFirstVariable"
            android:layout_width="200dp"
            android:inputType="number"
            android:hint="@string/enter_second_variable"
            android:layout_height="wrap_content"/>

    <EditText android:layout_width="200dp"
              android:id="@+id/etSecondVariable"
              android:inputType="number"
              android:hint="@string/enter_first_variable"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvSum"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvException"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/radio_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/radioOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sum"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub" />

        <RadioButton
            android:id="@+id/radioMul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mul" />

        <RadioButton
            android:id="@+id/radioDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div" />

    </RadioGroup>

    <Button android:id="@+id/btnCalculate"
            android:layout_width="200dp"
            android:text="@string/calculate"
            android:layout_height="wrap_content"/>

    <Button android:layout_width="200dp"
            android:text="@string/call"
            android:id="@+id/btnCall"
            android:layout_height="wrap_content"/>

    <Button android:layout_width="200dp"
            android:id="@+id/btnView"
            android:text="@string/open"
            android:layout_height="wrap_content"/>

    <Button android:layout_width="200dp"
        android:id="@+id/btnSend"
        android:text="@string/btn_send"
        android:layout_height="wrap_content"/>


</LinearLayout>
